original/tests%20231230024431/compiler_output/CompilerOutput-CountUpTo_154_1Test.java.txt
/home/minbao/PycharmProject/ChatUniTest-main/original/tests%20231230024431/test_cases/CountUpTo_154_1Test.java:13: error: isPrime(int) has private access in CountUpTo
        assertTrue(CountUpTo.isPrime(2));
                            ^
/home/minbao/PycharmProject/ChatUniTest-main/original/tests%20231230024431/test_cases/CountUpTo_154_1Test.java:14: error: isPrime(int) has private access in CountUpTo
        assertTrue(CountUpTo.isPrime(3));
                            ^
/home/minbao/PycharmProject/ChatUniTest-main/original/tests%20231230024431/test_cases/CountUpTo_154_1Test.java:15: error: isPrime(int) has private access in CountUpTo
        assertTrue(CountUpTo.isPrime(5));
                            ^
/home/minbao/PycharmProject/ChatUniTest-main/original/tests%20231230024431/test_cases/CountUpTo_154_1Test.java:16: error: isPrime(int) has private access in CountUpTo
        assertTrue(CountUpTo.isPrime(7));
                            ^
/home/minbao/PycharmProject/ChatUniTest-main/original/tests%20231230024431/test_cases/CountUpTo_154_1Test.java:17: error: isPrime(int) has private access in CountUpTo
        assertTrue(CountUpTo.isPrime(11));
                            ^
/home/minbao/PycharmProject/ChatUniTest-main/original/tests%20231230024431/test_cases/CountUpTo_154_1Test.java:18: error: isPrime(int) has private access in CountUpTo
        assertTrue(CountUpTo.isPrime(13));
                            ^
/home/minbao/PycharmProject/ChatUniTest-main/original/tests%20231230024431/test_cases/CountUpTo_154_1Test.java:19: error: isPrime(int) has private access in CountUpTo
        assertTrue(CountUpTo.isPrime(17));
                            ^
/home/minbao/PycharmProject/ChatUniTest-main/original/tests%20231230024431/test_cases/CountUpTo_154_1Test.java:20: error: isPrime(int) has private access in CountUpTo
        assertTrue(CountUpTo.isPrime(19));
                            ^
/home/minbao/PycharmProject/ChatUniTest-main/original/tests%20231230024431/test_cases/CountUpTo_154_1Test.java:21: error: isPrime(int) has private access in CountUpTo
        assertFalse(CountUpTo.isPrime(4));
                             ^
/home/minbao/PycharmProject/ChatUniTest-main/original/tests%20231230024431/test_cases/CountUpTo_154_1Test.java:22: error: isPrime(int) has private access in CountUpTo
        assertFalse(CountUpTo.isPrime(6));
                             ^
/home/minbao/PycharmProject/ChatUniTest-main/original/tests%20231230024431/test_cases/CountUpTo_154_1Test.java:23: error: isPrime(int) has private access in CountUpTo
        assertFalse(CountUpTo.isPrime(8));
                             ^
/home/minbao/PycharmProject/ChatUniTest-main/original/tests%20231230024431/test_cases/CountUpTo_154_1Test.java:24: error: isPrime(int) has private access in CountUpTo
        assertFalse(CountUpTo.isPrime(9));
                             ^
/home/minbao/PycharmProject/ChatUniTest-main/original/tests%20231230024431/test_cases/CountUpTo_154_1Test.java:25: error: isPrime(int) has private access in CountUpTo
        assertFalse(CountUpTo.isPrime(10));
                             ^
/home/minbao/PycharmProject/ChatUniTest-main/original/tests%20231230024431/test_cases/CountUpTo_154_1Test.java:26: error: isPrime(int) has private access in CountUpTo
        assertFalse(CountUpTo.isPrime(12));
                             ^
/home/minbao/PycharmProject/ChatUniTest-main/original/tests%20231230024431/test_cases/CountUpTo_154_1Test.java:27: error: isPrime(int) has private access in CountUpTo
        assertFalse(CountUpTo.isPrime(14));
                             ^
/home/minbao/PycharmProject/ChatUniTest-main/original/tests%20231230024431/test_cases/CountUpTo_154_1Test.java:28: error: isPrime(int) has private access in CountUpTo
        assertFalse(CountUpTo.isPrime(15));
                             ^
/home/minbao/PycharmProject/ChatUniTest-main/original/tests%20231230024431/test_cases/CountUpTo_154_1Test.java:29: error: isPrime(int) has private access in CountUpTo
        assertFalse(CountUpTo.isPrime(16));
                             ^
/home/minbao/PycharmProject/ChatUniTest-main/original/tests%20231230024431/test_cases/CountUpTo_154_1Test.java:30: error: isPrime(int) has private access in CountUpTo
        assertFalse(CountUpTo.isPrime(18));
                             ^
/home/minbao/PycharmProject/ChatUniTest-main/original/tests%20231230024431/test_cases/CountUpTo_154_1Test.java:31: error: isPrime(int) has private access in CountUpTo
        assertFalse(CountUpTo.isPrime(20));
                             ^
19 errors
